--- a/package.json
+++ b/package.json
@@ -5,14 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint:fix": "eslint . --ext .js --fix"
   },
   "private": true,
   "dependencies": {
     "body-parser": "^2.2.0",
     "certifi": "^14.5.15",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "nodemon": "^3.1.10",
     "yt-dlp-wrap": "2.3.12"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.2.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "17.7.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-promise": "6.5.1",
+    "prettier": "^3.6.2"
   }
 }
