--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^8.2.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "yt-dlp-wrap": "2.3.12"
   },
