--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clippy",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,16 +23,10 @@
     "yt-dlp-wrap": "2.3.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.2.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "17.7.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-promise": "6.5.1",
+    "neostandard": "^0.12.0",
     "prettier": "^3.6.2"
   }
 }
